...
    let request = RequestFactory()
    var catalog: [CatalogResponse] = []
    
    // MARK: - ViewController methods.
    override func viewDidLoad() {
        super.viewDidLoad()
        view.accessibilityIdentifier = "catalogVC"
        tableView.delegate = self
        tableView.dataSource = self
        tableView.rowHeight = UITableView.automaticDimension
        self.setupTableView()
    }
    // MARK: - Setup methods.
...
