...
    private var users: Results<User>?
    private var usertoDB = [User]()
    let disposeBag = DisposeBag()
    
    // MARK: - ViewController methods.
    override func viewDidLoad() {
        view.accessibilityIdentifier = "signupVC"
        super.viewDidLoad()
        users = signupDB.loadUser()
        setupUI()
        configureSignupBindings()
        printRealmMessage()
    }
...
